# clippy

./: .eslintignore  .gitignore  AI-DEMO-WARNING.md  QUICK-START-AI.md  README.md  eslint.config.js  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
.serena/: project.yml
bmad/_cfg/: files-manifest.csv  manifest.yaml
bmad/bmm/: config.yaml
bmad/core/: config.yaml
docs/: HANDOFF-2025-10-28.md  HANDOFF-MPV-VISUAL-PLAYBACK-MODES-2025-10-28.md  HANDOFF-PLAYBACK-MODE-DEBUG-2025-10-28.md  HANDOFF-VIDEO-PLAYER-ENHANCEMENTS-2025-10-28.md  PRD.md  SESSION-COMPLETE-2025-10-28.md  STORY-2.4-IMPLEMENTATION-GUIDE.md  SUMMARY-MPV-BUG-FIX-2025-10-28.md  TECHNICAL-DEBT.md  architecture.md  backlog.md  bmm-workflow-status.md  bugfixes-2025-10-29.md  epic-3-retrospective.md  epic-5-composition-playback-plan.md  epic-5-retrospective.md  epics.md  gate-decision-story-2.6-PASS.md  handoff-story-2.3-from-2.2.md  implementation-notes-story-2.2-screencapturekit.md  implementation-readiness-report-2025-10-27.md  implementation-readiness-report-2025-10-28.md  product-brief-clippy-2025-10-27.md  sprint-change-proposal-2025-10-28-focus-context.md  sprint-change-proposal-2025-10-28.md  sprint-status.yaml  tech-spec-epic-2.md  tech-spec-epic-3.md  test-implementation-story-2.7.md  test-review-story-2.4.md  test-review-story-2.7.md  traceability-matrix-story-2.5-UPDATED.md  traceability-matrix-story-2.5.md  validation-report-architecture-2025-10-28.md
docs/retrospectives/: epic-2-retro-2025-10-29.md  (+1 more)
src/: App.test.tsx  App.tsx  index.css
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json  test-results.txt
src-tauri/src/: lib.rs
src-tauri/src-tauri/: Cargo.toml
src-tauri/src/commands/: ai_analysis.rs  composition.rs  export.rs  media.rs  mod.rs  mpv.rs  performance.rs  recording.rs  test_avfoundation_camera.rs  timeline_render.rs
src-tauri/src/models/: export.rs  media.rs  mod.rs  recording.rs  timeline.rs
src-tauri/src/services/: audio_capture.rs  composition_analyzer.rs  mod.rs  mpv_player.rs  performance_monitor.rs  performance_monitor_test.rs  segment_preloader.rs  segment_renderer.rs  segment_renderer.rs.bak  timeline_renderer.rs
src-tauri/src/services/camera/: avfoundation_camera.rs  camera_backend.rs  mod.rs  nokhwa_wrapper.rs
src-tauri/src/services/ffmpeg/: audio_mixer.rs  compositor.rs  encoder.rs  exporter.rs  exporter.rs.bak  mod.rs
src-tauri/src/services/permissions/: macos.rs  mod.rs
src-tauri/src/services/recording/: frame_synchronizer.rs  mod.rs  orchestrator.rs
src-tauri/src/services/screen_capture/: frame_handler.rs  mod.rs  screencapturekit.rs
src-tauri/src/test_utils/: audio_comparison.rs  composition_playback.rs  frame_comparison.rs  mod.rs  timeline_fixtures.rs
src-tauri/src/utils/: ffmpeg.rs  mod.rs  paths.rs
src-tauri/tests/: README.md  camera_integration.rs  composition_parity_tests.rs  performance_integration_tests.rs  test_4_7_integration.rs  test_5_6_integration.rs
src-tauri/tests/outputs/: single_track_timeline.json
(+235 files in other folders)
