[package]
name = "clippy"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "clippy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
tauri-plugin-os = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
async-openai = "0.28"
ffmpeg-sidecar = "2.1"
screencapturekit = "0.3"
nokhwa = { version = "0.10", features = ["input-avfoundation"] }
cpal = "0.16"
libmpv2 = "5.0"
dirs = "6"
base64 = "0.22"
lazy_static = "1.4"
core-media-rs = "0.3.5"
core-video-rs = "0.3.5"
core-foundation = "0.10"
libc = "0.2"
image = "0.25"
hound = "3.5"
sha2 = "0.10"
sysinfo = "0.30"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24"
objc = "0.2"
objc-foundation = "0.1"
libc = "0.2"

[dev-dependencies]
tempfile = "3"

